discussion/kv_engine/155002/155002_rev8_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-46729: Explicitly start and stop the ExecutorPool

Explicitly start and stop the ExecutorPool from the memcached
core.

Change-Id: I364d0b4b08910fcff9955ce066b9d2ce409be84c

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Trond Norbye
Date: 2021-06-08 11:06:10.000000000
Message: 
Uploaded patch set 8: Patch Set 7 was rebased.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2021-06-08 13:36:26.000000000
Message: 
Patch Set 8: Verified-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/9589/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/bucket_logger.h:14:10: error: "spdlog/logger.h" file not found [clang-diagnostic-error]
#include "spdlog/logger.h"
         ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/9589/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/bucket_logger.h:14:10:
error: "spdlog/logger.h" file not found [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/9589/ )

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/36544/ : FAILURE

No problems were identified. If you know why this problem occurred, please add a suitable Cause for it. ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/36544/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/11165/ : FAILURE

Compile error at [2021-06-08T12:00:25.230Z] /opt/gcc-10.2.0/include/c++/10.2.0/type_traits:918:52:
error: non-constant condition for static assertion
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/11165/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/11313/ : FAILURE

Compile error at [2021-06-08T12:20:04.973Z] /opt/gcc-10.2.0/include/c++/10.2.0/type_traits:918:52:
error: non-constant condition for static assertion
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/11313/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/19168/ : FAILURE

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/8187/ : SUCCESS

http://cv.jenkins.couchbase.com/job/ming-test2/133/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/31229/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/10236/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/11585/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
